--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "capitulo-1/desafio-2/ROCKETSEAT-Ignite-NodeJS-Cap1-Desafio2"]
 	path = capitulo-1/desafio-2/ROCKETSEAT-Ignite-NodeJS-Cap1-Desafio2
 	url = https://github.com/EdTonatto/ROCKETSEAT-Ignite-NodeJS-Cap1-Desafio2
+[submodule "capitulo-1/desafio-3/ROCKETSEAT-Ignite-NodeJS-Cap1-Desafio3"]
+	path = capitulo-1/desafio-3/ROCKETSEAT-Ignite-NodeJS-Cap1-Desafio3
+	url = https://github.com/EdTonatto/ROCKETSEAT-Ignite-NodeJS-Cap1-Desafio3
