:truck: Renomeado pasta raiz

--- a/capitulo-3/conteudo/rentx/ormconfig.json
+++ b/capitulo-3/conteudo/rentx/ormconfig.json
@@ -3,6 +3,6 @@
   "port": 5432,
   "host": "localhost",
   "username": "docker",
-  "password": "rentx",
+  "password": "ignite",
   "database": "rentx"
 }
