--- a/capitulo-3/conteudo/rentx/docker-compose.yml
+++ b/capitulo-3/conteudo/rentx/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.7'
 
 services:
-  database_rentx:
+  database_ignite:
     image: postgres
-    container_name: database_rentx
+    container_name: database_ignite
     restart: always
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=rentx
+      - POSTGRES_PASSWORD=ignite
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
