--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "capitulo-2/desafio-2/ROCKETSEAT-Ignite-NodeJS-Cap2-Desafio2"]
 	path = capitulo-2/desafio-2/ROCKETSEAT-Ignite-NodeJS-Cap2-Desafio2
 	url = https://github.com/EdTonatto/ROCKETSEAT-Ignite-NodeJS-Cap2-Desafio2
+[submodule "capitulo-3/desafio-1/ROCKETSEAT-Ignite-NodeJS-Cap3-Desafio1"]
+	path = capitulo-3/desafio-1/ROCKETSEAT-Ignite-NodeJS-Cap3-Desafio1
+	url = https://github.com/EdTonatto/ROCKETSEAT-Ignite-NodeJS-Cap3-Desafio1
