--- a/capitulo-4/conteudo/rentx/.eslintrc.json
+++ b/capitulo-4/conteudo/rentx/.eslintrc.json
@@ -53,14 +53,14 @@
         "no-useless-constructor": "off",
         "no-empty-function": "off",
         "lines-between-class-members": "off",
-        // "import-helpers/order-imports": [
-        //     "warn",
-        //     {
-        //         "newlinesBetween": "always",
-        //         "groups": ["module", "/^@shared/", ["parent", "sibling", "index"]],
-        //         "alphabetize": { "order": "asc", "ignoreCase": true }
-        //     }
-        // ],
+        "import-helpers/order-imports": [
+            "warn",
+            {
+                "newlinesBetween": "always",
+                "groups": ["module", "/^@/", ["parent", "sibling", "index"]],
+                "alphabetize": { "order": "asc", "ignoreCase": true }
+            }
+        ],
         "import/no-extraneous-dependencies": [
             "error",
             { "devDependencies": ["**/*.spec.js"] }
