--- a/capitulo-4/conteudo/rentx/.eslintrc.json
+++ b/capitulo-4/conteudo/rentx/.eslintrc.json
@@ -17,7 +17,7 @@
     },
     "plugins": [
         "@typescript-eslint",
-        // "eslint-plugin-import-helpers",
+        "eslint-plugin-import-helpers",
         "prettier"
     ],
     "rules": {
